--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-		"symfony/symfony": ">2.1.0",
+		"symfony/filesystem": ">2.1.0",
 		"php": ">=5.3.3"
     },
 	"require-dev": {
