chore: travis codeclimate

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,11 @@ matrix:
   - php: 5.3
   - php: 5.4
   - php: 5.5
-before_install:
-- composer install
+install:
+- composer install --dev --no-scripts
+script:
+- php vendor/bin/phpunit --coverage-clover build/logs/clover.xml --whitelist=src/
+after_success:
+- bash <(curl -s https://codecov.io/bash)
+- ./vendor/bin/test-reporter --stdout > codeclimate.json
+- "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
