--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"php": ">=5.3.3"
     },
 	"require-dev": {
-		"phpunit/phpunit": "3.7.*"
+		"phpunit/phpunit": "^5.2"
 	},
 	"autoload": {
 		"psr-0": {
