--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"php": ">=5.3.3"
     },
 	"require-dev": {
-		"phpunit/phpunit": "^5.2"
+		"phpunit/phpunit": "^5.2",
+		"codeclimate/php-test-reporter": "dev-master"
 	},
 	"autoload": {
 		"psr-0": {
