--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-		"php": ">=5.3.3"
+		"symfony/filesystem": ">2.1.0",
+        "php": ">=5.3.3"
     },
 	"require-dev": {
 		"phpunit/phpunit": "^5.2",
