--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,27 @@
 {
-  "name": "keboola/php-temp",
-  "description": "Temp service - handles application's temporary files",
-  "license": "MIT",
-  "keywords": [
-    "filesystem",
-    "temp"
-  ],
-  "authors": [
-    {
-      "name": "Miro Cillik",
-      "email": "miro@keboola.cz"
+    "name": "keboola/php-temp",
+    "description": "Temp library handles application temporary folder",
+    "license": "MIT",
+    "keywords": [
+        "filesystem",
+        "temp"
+    ],
+    "authors": [
+        {
+            "name": "Keboola",
+            "email": "devel@keboola.com"
+        }
+    ],
+    "require": {
+        "symfony/filesystem": ">=2.8",
+        "php": ">=5.6"
     },
-    {
-      "name": "Ondrej Vana",
-      "email": "kachna@keboola.cz"
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
+    },
+    "autoload": {
+        "psr-0": {
+            "Keboola\\Temp": "src/"
+        }
     }
-  ],
-  "require": {
-    "symfony/filesystem": ">2.1.0",
-    "php": ">=5.3.3"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^5.2",
-    "codeclimate/php-test-reporter": "dev-master"
-  },
-  "autoload": {
-    "psr-0": {
-      "Keboola\\Temp": "src/"
-    }
-  }
 }
