--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,15 @@
         }
     ],
     "require": {
-        "symfony/filesystem": ">2.8",
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "symfony/filesystem": ">2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
         "jakub-onderka/php-parallel-lint": "^1.0",
         "phpstan/phpstan-shim": "^0.10.5",
-        "keboola/coding-standard": "^6.0"
+        "keboola/coding-standard": "^6.0",
+        "infection/infection": "^0.11.4"
     },
     "autoload": {
         "psr-4": {
@@ -33,15 +34,17 @@
         }
     },
     "scripts": {
-        "tests": "phpunit",
+        "tests": "phpunit --coverage-clover build/logs/clover.xml --coverage-xml=build/logs/coverage-xml --log-junit=build/logs/phpunit.junit.xml",
         "phpstan": "phpstan analyse ./src ./tests --level=max --no-progress -c phpstan.neon",
         "phpcs": "phpcs -n --ignore=vendor --extensions=php .",
         "phplint": "parallel-lint -j 10 --exclude vendor .",
+        "infection": "infection --threads=4 --min-covered-msi=80 --coverage=build/logs",
         "build": [
             "@phplint",
             "@phpcs",
             "@phpstan",
-            "@tests"
+            "@tests",
+            "@infection"
         ],
         "ci": [
             "@composer validate --no-check-publish --no-check-all",
