--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/filesystem": ">2.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^7.0|^8.0",
         "jakub-onderka/php-parallel-lint": "^1.0",
         "phpstan/phpstan-shim": "^0.11",
         "keboola/coding-standard": "^8.0",
